--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,6 +51,23 @@ height: 100%;
   .mobile{
    display: none;
   }
+  .checkout{
+    min-height: 80vh;
+    overflow-y: scroll;
+    
+  }
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.checkout {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.checkout::-webkit-scrollbar {
+  display: none; /* Chrome, Safari and Opera */
+}
+
  
   .head-media{
    gap:4em;
@@ -312,3 +329,5 @@ height: 100%;
   transform: translateY(-2px);
   box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
+
+
