--- a/client/src/pages/ProductDetails.css
+++ b/client/src/pages/ProductDetails.css
@@ -135,15 +135,17 @@ img {
   
 }
 .prod_details_right_col_001{
-    width: 45%;
+  margin-top: 70px;
+    width:50%;
     margin-left: 1rem;
     padding: 1rem 3rem;
     background-color: white;
 }
 
 .prod_details_info {
-   font-weight: 600;
-    color: #524f4ff0;
+   /* font-weight: 600; */
+   font-size: 15px;
+    color: #646363f0;
 }
 .price_box
 {
