--- a/client/src/pages/ProductDetails.css
+++ b/client/src/pages/ProductDetails.css
@@ -365,22 +365,22 @@ button {
   border-style: 2px solid;
 }
 
-input[type="number"] {
+/* input[type="number"] {
   width: 32px;
   font-size: 1rem;
   font-weight: 600;
   text-align: center;
-}
-
+} */
+/* 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
+} */
+/* 
 input[type="number"] {
   -moz-appearance: textfield;
-}
+} */
 .productDescription{
     display: flex;
     flex-direction: column;
