--- a/client/src/App.css
+++ b/client/src/App.css
@@ -438,4 +438,117 @@ top: 0;
   justify-content: center;
   align-items: center;
 }
+.invert {
+  filter: invert(1);
+}
 
+
+
+
+
+.checkout-button {
+  position: relative;
+  width: 91.6667%; /* w-11/12 */
+  background-color: #1a1a1a; /* bg-gray-900 */
+  color: white;
+  padding: 0.5rem; /* p-2 */
+  margin-top: 0.75rem; /* mt-3 */
+  border-radius: 1rem; /* rounded-xl */
+  font-weight: bold;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  overflow: hidden;
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.checkout-button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.checkout-button::before {
+  content: "Checkout";
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0);
+  
+  color: rgb(238, 238, 238);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: left 0.5s ease;
+  font-weight: bold;
+  border-radius: 1rem; /* To match the button's rounded corners */
+}
+
+.checkout-button:hover::before {
+  left: 0;
+}
+
+.checkout-button:hover {
+  transform: scale(1.05);
+}
+
+
+
+
+
+
+
+.rotating-text-container {
+  position: absolute;
+  width: 200px; /* Size of the circular path */
+  height: 200px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  animation: rotate-container 10s linear infinite;
+}
+
+.rotating-text {
+  position: relative;
+  width: 50%;
+  height: 50%;
+}
+
+.circle-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform-origin: 0 0;
+  white-space: nowrap;
+  font-size: 10px; /* Adjust font size as needed */
+  text-align: center;
+  animation: rotate-text 10s linear infinite;
+  color: white; /* Text color */
+  text-shadow: 0 0 5px #00f, 0 0 10px #00f, 0 0 15px #00f, 0 0 20px #00f, 0 0 25px #00f, 0 0 30px #00f, 0 0 35px #00f; /* Glow effect */
+}
+
+.circle-text:nth-child(1) { transform: rotate(0deg) translate(0, -40px); }
+.circle-text:nth-child(2) { transform: rotate(36deg) translate(0, -40px); }
+.circle-text:nth-child(3) { transform: rotate(72deg) translate(0, -40px); }
+.circle-text:nth-child(4) { transform: rotate(108deg) translate(0, -40px); }
+.circle-text:nth-child(5) { transform: rotate(144deg) translate(0, -40px); }
+.circle-text:nth-child(6) { transform: rotate(180deg) translate(0, -40px); }
+.circle-text:nth-child(7) { transform: rotate(216deg) translate(0, -40px); }
+.circle-text:nth-child(8) { transform: rotate(252deg) translate(0, -40px); }
+.circle-text:nth-child(9) { transform: rotate(288deg) translate(0, -40px); }
+.circle-text:nth-child(10) { transform: rotate(324deg) translate(0, -40px); }
+
+@keyframes rotate-container {
+  from {
+    transform: translate(-50%, -50%) rotate(0deg);
+  }
+  to {
+    transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
