--- a/client/src/App.css
+++ b/client/src/App.css
@@ -553,3 +553,47 @@ top: 0;
     transform: translate(-50%, -50%) rotate(360deg);
   }
 }
+
+
+
+.faq-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.faq-title {
+  font-size: 1.5em;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.faq-category {
+  font-size: 1.5em;
+  margin-bottom: 15px;
+}
+
+.faq-item {
+  margin-bottom: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #ddd;
+  padding: 10px 0;
+}
+
+.faq-question {
+  font-size: 1.2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.faq-toggle-icon {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.faq-answer {
+  margin-top: 10px;
+  font-size: 1em;
+  color: #555;
+}
